# synthetic-data-generator

./: .mypy.ini  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.ipynb
fraudforge/: __init__.py  cli.py  config.py  exceptions.py  generator.py  metadata.py  models.py  ports.py  storage.py
fraudforge/.ipynb_checkpoints/: __init__-checkpoint.py  config-checkpoint.py  storage-checkpoint.py
fraudforge/adapters/: __init__.py  csv_writer.py  json_writer.py  parquet_writer.py  writer_base.py
fraudforge/adapters/.ipynb_checkpoints/: csv_writer-checkpoint.py  json_writer-checkpoint.py  parquet_writer-checkpoint.py  writer_base-checkpoint.py
fraudforge/dq/: __init__.py  injectors.py
fraudforge/fit/: __init__.py  reference.py
fraudforge/scenarios/: __init__.py  base.py  baseline.py  causal_collider.py  causal_simpson.py
fraudforge/synth/: __init__.py  eval.py  factory.py  faker_provider.py  ports.py  sdv_adapter.py  smartnoise_adapter.py  synthcity_adapter.py  ydata_adapter.py
mounted_buckets/datalake-raw-dark-data-discovery/synthetic_data_for_fraud/: metadata.json
mounted_buckets/synthetic_data_for_fraud/: metadata.json  transactions.parquet
notebook_out/: metadata.json  transactions.parquet
tests/: test_acceptance.py  test_cli.py  test_dirty_and_json.py  test_dirty_injector.py  test_distributions.py  test_imports.py  test_reference_fit.py  test_synth_factory.py
