[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudforge"
version = "0.1.0"
description = "Synthetic banking fraud transaction generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "FraudForge Team"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.5",
    "typer>=0.12",
    "pyarrow>=16.0",
    "rich>=13.7",
    "orjson>=3.10",
]

[project.optional-dependencies]
faker = ["faker>=19", "mimesis>=12"]
sdv = ["sdv>=1.5", "sdmetrics>=0.11"]
ydata = ["ydata-synthetic>=1.3", "torch>=2.2"]
synthcity = ["synthcity>=0.3", "torch>=2.2"]
dp = ["smartnoise-synth>=1.0"]

[project.scripts]
fraudforge = "fraudforge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fraudforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "DTZ", "ANN", "S"]

[tool.typer.components]
# placeholder to silence tooling expectations
